Revisión objetos nivel 2

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ Assets/Models/Lv2 Items/Globos terraqueos nuevos/G/uploads_files_3886865_texture
 Assets/Models/Lv2 Items/Vaso descartable con sorbete/uploads_files_2766709_textures.rar.meta
 Assets/Models/Lv2 Items/Globos terraqueos nuevos/F/uploads_files_4459924_EARTH&MOON_TEXTURES.rar.meta
 Assets/Models/Lv2 Items/Acoustic Guitar/uploads_files_2823326_textures.rar.meta
+Assets/Models/Lv2 Items/Lv2 Entrance Lamp/uploads_files_1927838_Lee_Broom_Crescent_Table_Lamp_fbx_obj.zip.meta
