--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_9_0.bundle filter=lfs diff=lfs merge=lfs -text
 Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_9_0.so filter=lfs diff=lfs merge=lfs -text
 Assets/Models/Items/Practice/Camera/NewCamera.fbx filter=lfs diff=lfs merge=lfs -text
+Assets/Models/Items/Practice/Carteras/ModelR/leather[[:space:]]bag7.obj filter=lfs diff=lfs merge=lfs -text
